--- a/css/style.css
+++ b/css/style.css
@@ -39,57 +39,6 @@ nav{
 }
 /* nav end here */
 /* banner section start here */
-/* .banner{
-    display: flex;
-    width: 100%;
-}
-.left-sides{
-    width: 50%;
-}
-.left-side .content-inner{
-    position: absolute;
-    top: 50%;
-    left: 125px;
-    transform: translateY(-50%);
-    z-index: 8;
-    margin: 0;
-    padding: 0;
-    line-height: 1.1;
-}
-.banner-title{
-    -webkit-text-stroke: 1px #000;
-    font-size: 80px;
-    color: white;
-    font-weight: 600;
-    font-family: 'Poppins';
-    margin: 0;
-    padding: 0;
-    text-transform: uppercase;
-}
-.simple-title{
-    color: #000;
-    font-size: 80px;
-    font-weight: 900;
-    text-transform: uppercase;
-    margin: 0;
-    padding: 0;
-    line-height: 1.1;
-    font-family: 'Poppins';
-}
-.sub-title{
-    color: #767676;
-    display: inline-block;
-    font-style: italic;
-    font-family: 'poppins';
-}
-.right-side{
-    width: 100%;
-    height: 100vh;
-}
-
-h1{
-    color: white;
-} */
 section{
     height: 100vh;
     width: 100%;
@@ -119,22 +68,22 @@ section{
     z-index: 3;
 }
 .slide-1{
-    background-image: url(https://images.pexels.com/photos/842811/pexels-photo-842811.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=1);
+    background-image: url(https://images.pexels.com/photos/6140907/pexels-photo-6140907.jpeg?auto=compress&cs=tinysrgb&w=1200);
     background-repeat: no-repeat;
     background-size: cover;
 }
 .slide-2{
-    background-image: url(https://images.pexels.com/photos/1270076/pexels-photo-1270076.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=1);
+    background-image: url(https://images.pexels.com/photos/5910937/pexels-photo-5910937.jpeg?auto=compress&cs=tinysrgb&w=1200);
     background-repeat: no-repeat;
     background-size: cover;
 }
 .slide-3{
-    background-image: url(https://images.pexels.com/photos/937481/pexels-photo-937481.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=1);
+    background-image: url(https://images.pexels.com/photos/6009142/pexels-photo-6009142.jpeg?auto=compress&cs=tinysrgb&w=1200);
     background-repeat: no-repeat;
     background-size: cover;
 }
 .slide-4{
-    background-image:url(https://images.pexels.com/photos/842554/pexels-photo-842554.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=1);
+    background-image:url(https://images.pexels.com/photos/5910934/pexels-photo-5910934.jpeg?auto=compress&cs=tinysrgb&w=600);
     background-repeat: no-repeat;
     background-size: cover;
 }
