--- a/css/style.css
+++ b/css/style.css
@@ -39,10 +39,48 @@ nav{
 }
 /* nav end here */
 /* banner section start here */
+.content-inner{
+    position: absolute;
+    top: 50%;
+    left: 125px;
+    transform: translateY(-50%);
+    z-index: 8;
+    margin: 0;
+    padding: 0;
+    line-height: 1.1;
+}
+.banner-title{
+    -webkit-text-stroke: 1px #000;
+    font-size: 80px;
+    color: white;
+    font-weight: 600;
+    font-family: 'Poppins';
+    margin: 0;
+    padding: 0;
+    text-transform: uppercase;
+}
+.simple-title{
+    color: #000;
+    font-size: 80px;
+    font-weight: 900;
+    text-transform: uppercase;
+    margin: 0;
+    padding: 0;
+    line-height: 1.1;
+    font-family: 'Poppins';
+}
+.sub-title{
+    color: #767676;
+    display: inline-block;
+    font-style: italic;
+    font-family: 'poppins';
+}
 section{
+    position: absolute;
+    top: 0;
+    right: 0;
     height: 100vh;
-    width: 100%;
-    position: relative;
+    width: 70%;
     overflow: hidden;
 }
 .slider{
@@ -74,24 +112,32 @@ section{
     background-position: center;
 }
 .slide-2{
-    background-image: url(https://images.pexels.com/photos/5910937/pexels-photo-5910937.jpeg?auto=compress&cs=tinysrgb&w=1200);
+    background-image: url(https://images.pexels.com/photos/3875643/pexels-photo-3875643.jpeg?auto=compress&cs=tinysrgb&w=1200);
     background-repeat: no-repeat;
     background-size: cover;
+    background-position: center top;
 }
 .slide-3{
-    background-image: url(https://images.pexels.com/photos/6009142/pexels-photo-6009142.jpeg?auto=compress&cs=tinysrgb&w=1200);
+    background-image: url(https://images.pexels.com/photos/4624889/pexels-photo-4624889.jpeg?auto=compress&cs=tinysrgb&w=1200);
     background-repeat: no-repeat;
     background-size: cover;
+    background-position: center top;
 }
 .slide-4{
-    background-image:url(https://images.pexels.com/photos/5910934/pexels-photo-5910934.jpeg?auto=compress&cs=tinysrgb&w=600);
+    background-image:url(https://images.pexels.com/photos/4925916/pexels-photo-4925916.jpeg?auto=compress&cs=tinysrgb&w=1200);
     background-repeat: no-repeat;
     background-size: cover;
+    background-position: center;
 }
 /* banner section end here */
 /* Responsive */
 @media (max-width:1050px){
-    .left-sides{
-        display: none;
+    section{
+        position: absolute;
+        top: 0;
+        right: left;
+        height: 100vh;
+        width: 100%;
+        overflow: hidden;
     }
 }
