--- a/css/style.css
+++ b/css/style.css
@@ -148,25 +148,32 @@ section{
     nav {
         background-color: #fff;
         border-bottom: 1px solid #000;
+        padding: 13px 0px;
     }
     .nav-container {
         width: 95%;
         margin: 0 auto;
     }
     .nav-container ul {
-        padding-top: 20px;
+        padding-top: 7px;
         flex-direction: column;
         position: absolute;
-        top: 68px;
-        left: 0;
+        top: 54px;
+        left: 0px;
         background-color: #fff;
         width: 100%;
         padding-bottom: 20px;
     }
+    .nav-container ul li{
+        margin: 0;
+        padding: 0;
+        margin-left: 22px;
+        margin-top: 22px;
+    }
     section{
         position: absolute;
         top: 0;
-        right: left;
+        right: 0;
         height: 100vh;
         width: 100%;
         overflow: hidden;
