--- a/css/style.css
+++ b/css/style.css
@@ -43,16 +43,6 @@ nav{
 }
 /* nav end here */
 /* banner section start here */
-.content-inner{
-    position: absolute;
-    top: 50%;
-    left: 125px;
-    transform: translateY(-50%);
-    z-index: 4;
-    margin: 0;
-    padding: 0;
-    line-height: 1.1;
-}
 .banner-title{
     -webkit-text-stroke: 1px #000;
     font-size: 80px;
@@ -68,8 +58,9 @@ nav{
     font-size: 80px;
     font-weight: 900;
     text-transform: uppercase;
-    margin: 0;
-    padding: 0;
+    /* margin: 0px; */
+    margin-top: -23px;
+    /* padding: 0px; */
     line-height: 1.1;
     font-family: 'Poppins';
 }
@@ -78,12 +69,31 @@ nav{
     display: inline-block;
     font-style: italic;
     font-family: 'poppins';
+    padding-top: 16px;
+} */
+/* .banner{
+    position: relative;
+    height: 100vh;
+    width: 80%;
+} */
+.banner{
+    position: relative;
+    width: 100%;
+    height: 100vh;
+    overflow: hidden;
 }
-section{
+.content-inner{
+    position: absolute;
+    top: 50%;
+    left: 10%;
+    transform: translateY(-50%);
+    z-index: 500555;
+}
+.main-slider{
     position: absolute;
     top: 0;
     right: 0;
-    height: 100vh;
+    height: 100%;
     width: 70%;
     overflow: hidden;
 }
@@ -149,9 +159,10 @@ section{
         background-color: #fff;
         border-bottom: 1px solid #000;
         padding: 13px 0px;
+        z-index: 1000000;
     }
     .nav-container {
-        width: 95%;
+        width: 91%;
         margin: 0 auto;
     }
     .nav-container ul {
@@ -170,12 +181,29 @@ section{
         margin-left: 22px;
         margin-top: 22px;
     }
-    section{
+    .main-slider{
         position: absolute;
         top: 0;
         right: 0;
-        height: 100vh;
+        height: 100%;
         width: 100%;
         overflow: hidden;
+    }
+}
+@media (max-width:500px){
+    .banner-title{
+        font-size: 50px;
+        margin: 0!important;
+    }
+    .simple-title{
+        font-size: 50px;
+        margin-top: -11px;
+    }
+    .sub-title{
+        padding-top: 16px;
+        font-size: 16px;
+    }
+    .content-inner{
+        left: 4%;
     }
 }
