--- a/css/style.css
+++ b/css/style.css
@@ -1,11 +1,8 @@
-@import url('https://fonts.googleapis.com/css2?family=Poppins:ital,wght@1,900&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,300;0,700;1,100;1,200;1,900&display=swap');
 *{
     padding: 0;
     margin: 0;
     box-sizing: border-box;
-}
-body{
-    overflow: hidden;
 }
 /* nav start here */
 nav{
@@ -43,51 +40,11 @@ nav{
 }
 /* nav end here */
 /* banner section start here */
-.banner-title{
-    -webkit-text-stroke: 1px #000;
-    font-size: 80px;
-    color: white;
-    font-weight: 600;
-    font-family: 'Poppins';
-    margin: 0;
-    padding: 0;
-    text-transform: uppercase;
-}
-.simple-title{
-    color: #000;
-    font-size: 80px;
-    font-weight: 900;
-    text-transform: uppercase;
-    /* margin: 0px; */
-    margin-top: -23px;
-    /* padding: 0px; */
-    line-height: 1.1;
-    font-family: 'Poppins';
-}
-.sub-title{
-    color: #767676;
-    display: inline-block;
-    font-style: italic;
-    font-family: 'poppins';
-    padding-top: 16px;
-} */
-/* .banner{
-    position: relative;
-    height: 100vh;
-    width: 80%;
-} */
 .banner{
     position: relative;
     width: 100%;
     height: 100vh;
     overflow: hidden;
-}
-.content-inner{
-    position: absolute;
-    top: 50%;
-    left: 10%;
-    transform: translateY(-50%);
-    z-index: 500555;
 }
 .main-slider{
     position: absolute;
@@ -143,19 +100,132 @@ nav{
     background-size: cover;
     background-position: center;
 }
+.content-inner{
+    position: absolute;
+    top: 50%;
+    left: 10%;
+    transform: translateY(-50%);
+    z-index: 500555;
+}
+.banner-title{
+    -webkit-text-stroke: 1px #000;
+    font-size: 80px;
+    color: white;
+    font-weight: 600;
+    font-family: 'Poppins';
+    margin: 0;
+    padding: 0;
+    text-transform: uppercase;
+}
+.simple-title{
+    color: #000;
+    font-size: 80px;
+    font-weight: 900;
+    text-transform: uppercase;
+    margin-top: -23px;
+    line-height: 1.1;
+    font-family: 'Poppins';
+}
+.sub-title{
+    color: #767676;
+    display: inline-block;
+    font-style: italic;
+    font-weight: 200;
+    font-family: 'poppins';
+    padding-top: 16px;
+} 
 /* banner section end here */
+/* about section start here */
+.about{
+    margin-top: 147px;
+}
+.container{
+    width: 100%;
+}
+.about .row{
+    width: 80%;
+    margin: 0 auto;
+    display: flex;
+}
+.about-left{
+    width: 40%;
+    height: 500px;
+}
+.about .about-left-image{
+    width: 100%;
+    height: auto;
+    max-width: 100%;
+}
+.about-right{
+    width: 60%;
+    padding-left: 80px;
+}
+.about-right .title-holder{
+    width: 100%;
+    margin-bottom: 35px;
+    padding-bottom: 35px;
+    border-bottom:1px solid rgba(0,0,0,.1);
+}
+.about-right .title-holder .about-simple-title{
+    color: #000;
+    font-size: 35px;
+    font-weight: 900;
+    text-transform: uppercase;
+    line-height: 1.1;
+    font-family: 'Poppins';
+    position: relative;
+}
+.about-right .title-holder .about-simple-title span.bg-title{
+    position: absolute;
+    left: -6px;
+    color: transparent;
+    font-size: 150px;
+    font-weight: 900;
+    opacity: .1;
+    line-height: 1;
+    max-width: 100%;
+    overflow: hidden;
+    white-space: nowrap;
+    -webkit-text-stroke: 1px #000;
+    -webkit-user-select: none;
+    bottom: -36px;
+    z-index: -1;
+}
+.about-right .title-holder .about-sub-title{
+    font-family: poppins;
+    font-weight: 200;
+    display: inline-block;
+    padding-top: 10px;
+    font-style: italic;
+    color: #54595F;
+    font-size: 16px;
+}
+.about-right .desc p{
+    margin-bottom: 11px;
+    width: 100%;
+    line-height: 1.5;
+    font-weight: 200;
+    color: #54595F;
+}
+.about-right .learn-more-btn a{
+    margin-top: 30px;
+    display: inline-block;
+    text-decoration: none;
+    background-color: #000;
+    padding: 20px 40px;
+    color: #fff;
+    font-weight: 100;
+    letter-spacing: 1px;
+    border: 2px solid #000;
+    transition: all .3s ease;
+}
+.about-right .learn-more-btn a:hover{
+    background-color: transparent;
+    color: #54595F;
+}
+/* about section end here */
 /* Responsive */
-@media (max-width:750px){
-    #bar-menu{
-        display: block;
-        cursor: pointer;
-    }
-    #bar-menu i{
-        font-size: 26px;
-    }
-    .logo img{
-        width: 42px;
-    }
+@media (max-width:769px){
     nav {
         background-color: #fff;
         border-bottom: 1px solid #000;
@@ -163,7 +233,7 @@ nav{
         z-index: 1000000;
     }
     .nav-container {
-        width: 91%;
+        width: 80%;
         margin: 0 auto;
     }
     .nav-container ul {
@@ -187,6 +257,16 @@ nav{
         margin-left: 22px;
         margin-top: 22px;
     }
+    #bar-menu{
+        display: block;
+        cursor: pointer;
+    }
+    #bar-menu i{
+        font-size: 26px;
+    }
+    .logo img{
+        width: 42px;
+    }
     .main-slider{
         position: absolute;
         top: 0;
@@ -196,7 +276,7 @@ nav{
         overflow: hidden;
     }
     .content-inner{
-        left: 3%;
+        left: 10%;
     }
     .banner-title{
         font-size: 50px;
@@ -213,8 +293,31 @@ nav{
     .content-inner{
         top: 60%;
     }
+    /* about section start here */
+    .about {
+        margin-top: 76px;
+    }
+    .about .row{
+        flex-direction: column;
+    }
+    .about-left{
+        width: 100%;
+        margin-bottom: 127px;
+    }
+    .about-right{
+        width: 100%;
+        padding-left: 0px;
+    }
+    .about-right .title-holder .about-simple-title span.bg-title{
+        font-size: 150px;
+    }
+    /* about section end here */
 }
 @media (max-width:500px){
+    .content-inner{
+        left: 10%;
+        top: 60%;
+    }
     .banner-title{
         font-size: 50px;
         margin: 0!important;
@@ -227,8 +330,8 @@ nav{
         padding-top: 16px;
         font-size: 16px;
     }
-    .content-inner{
-        left: 4%;
-        top: 60%;
+    .about-left {
+        width: 100%;
+        margin-bottom: -85px;
     }
 }
