--- a/css/style.css
+++ b/css/style.css
@@ -149,12 +149,17 @@ nav{
 }
 .about-left{
     width: 40%;
-    height: 500px;
+    height: 350px;
+    position: relative;
 }
 .about .about-left-image{
+    position: absolute;
+    top: 0;
+    left: 0;
+    height: 100%;
     width: 100%;
-    height: auto;
-    max-width: 100%;
+    object-fit: cover;
+    background-position: center top;
 }
 .about-right{
     width: 60%;
@@ -308,7 +313,7 @@ nav{
     }
     .about-left{
         width: 100%;
-        margin-bottom: 201px;
+        margin-bottom: 91px;
     }
     .about-right{
         width: 100%;
@@ -338,6 +343,6 @@ nav{
     }
     .about-left {
         width: 100%;
-        margin-bottom: -85px;
+        margin-bottom: 80px;
     }
 }
