everything is ok i am goint to do code organize

--- a/css/style.css
+++ b/css/style.css
@@ -264,7 +264,7 @@ nav{
     .nav-container ul li{
         margin: 0;
         padding: 0;
-        margin-left: 22px;
+        margin-left: 5%;
         margin-top: 22px;
     }
     #bar-menu{
