--- a/css/style.css
+++ b/css/style.css
@@ -1,4 +1,4 @@
-@import url('https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,300;0,700;1,100;1,200;1,900&family=Roboto:wght@500&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,300;0,500;0,700;1,100;1,200;1,900&family=Roboto:wght@500&display=swap');
 *{
     padding: 0;
     margin: 0;
@@ -312,6 +312,100 @@ nav{
     border: 1px solid #050505!important;
 }
 /* skill end start here */
+.portfolio{
+    margin-top: 147px;
+}
+.portfolio .container{
+    width: 100%;
+    background-color: #F8F9FA;
+}
+.portfolio .container .row{
+    width: 80%;
+    margin: 0 auto;
+}
+.portfolio .container .row .title-holder{
+    padding: 195px 0px 108px;
+}
+#filter-open{
+    display: block;
+    width: 30px;
+    min-width: 30px;
+    height: 17px;
+    position: relative;
+    text-decoration: none;
+    margin-left: 50px;
+}
+#filter-open span{
+    position: absolute;
+    top: 50%;
+    transform: translateY(-50%);
+    width: 30px;
+    height: 3px;
+    background-color: #000;
+}
+#filter-open span::after{
+    position: absolute;
+    content: "";
+    left: 0;
+    bottom: 8px;
+    width: 15px;
+    height: 3px;
+    background-color: #000;
+}
+#filter-open span::before{
+    position: absolute;
+    content: "";
+    right: 0;
+    top: 8px;
+    width: 15px;
+    height: 3px;
+    background-color: #000;
+}
+.portfolio .container .row .title-holder{
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+}
+.filter{
+    height: 30px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+.filter .filter-item{
+    display: flex;
+    margin: 0;
+    padding: 0;
+    list-style: none;
+    visibility: hidden;
+    opacity: 0;
+    transition: all .3s ease;
+}
+.filter .filter-item.active{
+    visibility: visible;
+    opacity: 1;
+}
+.filter .filter-item li{
+    margin: 0 30px 0 0;
+}
+.filter .filter-item  li a{
+    text-decoration: none;
+    color: #767676;
+    font-family: poppins;
+    font-weight: 500;
+}
+.filter .filter-item  li a.active{
+    color: #000;
+    font-family: poppins;
+    font-weight: 500;
+}
+.portfolio-title-right{
+    margin-left: auto;
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+}
+
 /* Responsive */
 @media (max-width:769px){
     .logo img{
@@ -400,7 +494,7 @@ nav{
 }
 @media (max-width:500px){
     /* about section start here */
-    
+
     /* about section end here */
     /* skill slider section start here */
     .skill {
