--- a/css/style.css
+++ b/css/style.css
@@ -346,10 +346,10 @@ nav{
 .portfolio .container .row .portfolio-title-holder .title-left h3 .bg-title{
     position: absolute;
     left: -4px;
-    top: -67px;
+    top: -56px;
     font-weight: 900;
     font-family: poppins;
-    font-size: 150px;
+    font-size: 129px;
     -webkit-text-stroke: 1px #000;
     color: transparent;
     line-height: 1;
@@ -419,7 +419,6 @@ nav{
 }
 .portfolio .container .row .filter-holder .filter-row .item{
     width: 100%;
-    height: 350px;
     background-color: rgb(23, 42, 69);
     padding: 25px 35px;
 }
@@ -459,21 +458,22 @@ nav{
     margin-top: 19px;
     margin-bottom: 92px;
 }
-.portfolio .container .row .filter-holder .filter-row .item footer .lan-list{
-    display: inline-flex;
+.portfolio .container .row .filter-holder .filter-row .item footer{
+    width: 100%;
 }
-.portfolio .container .row .filter-holder .filter-row .item footer .lan-list li{
-    list-style: none;
-    margin: 0;
-    padding: 0;
+.portfolio .container .row .filter-holder .filter-row .item footer .nav-links{
+    width: 100%;
+    display: flex;
+    flex-wrap: wrap;
 }
-.portfolio .container .row .filter-holder .filter-row .item footer .lan-list li a{
+.portfolio .container .row .filter-holder .filter-row .item footer .nav-links a{
     text-decoration: none;
-    font-size: 12px;
+    font-size: 13px;
     color: rgb(136, 146, 176);
     line-height: 1.75;
     font-weight: 200;
     font-family: poppins;
+    padding-right: 20px;
 }
 /* Responsive */
 @media (max-width:769px){
