--- a/css/style.css
+++ b/css/style.css
@@ -4,6 +4,19 @@
     margin: 0;
     box-sizing: border-box;
 }
+body{
+    background-color: #fff;
+}
+section{
+    width: 100%;
+}
+.container{
+    width: 80%;
+    margin: 0 auto;
+}
+.row{
+    display: flex;
+}
 /* nav start here */
 nav{
     position: fixed;
@@ -131,14 +144,14 @@ nav{
 .about{
     margin-top: 147px;
 }
-.container{
+/* .container{
     width: 100%;
-}
-.about .row{
+} */
+/* .about .row{
     width: 80%;
     margin: 0 auto;
     display: flex;
-}
+} */
 .about-left{
     width: 40%;
     height: 350px;
@@ -225,24 +238,34 @@ nav{
 .skill{
         margin-top: 147px;
 } 
-.skill .container{
+/* .skill .container{
     width: 100%;
-}  
-.skill .container .row{
+}   */
+/* .skill .container .row{
     width: 80%;
     margin: 0 auto;
-}
-.skill .container .row .skillSlider{
+} */
+/* .skill .container .row .skillSlider{
+    position: relative;
+    width: 100%;
+    height: 300px;
+    overflow: hidden;
+} */
+.skillSlider{
     position: relative;
     width: 100%;
     height: 300px;
     overflow: hidden;
 }
-.skill .container .row .mainSlider .slider{
+/* .skill .container .row .slider{
+    width: 100%;
+    height: 100%;
+} */
+.skillSlider .slider{
     width: 100%;
     height: 100%;
 }
-.skill .container .row .skillSlider .slider .s-slide{
+/* .skill .container .row .skillSlider .slider .s-slide{
     position: absolute;
     z-index: -1;
     transform: translateY(-50%);
@@ -254,29 +277,40 @@ nav{
     text-align: center;
     flex-direction: column;
     transform: translateX(100%);
+} */
+.skillSlider .slider .s-slide{
+    position: absolute;
+    z-index: -1;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    display: flex;
+    text-align: center;
+    flex-direction: column;
+    transform: translateX(100%);
 }
-.skill .container .row .skillSlider .slider .s-slide.active{
+.skillSlider .slider .s-slide.active{
     z-index: 3;
     transform: translateX(0);
 }
-.skill .container .row .skillSlider .slider .s-slide.top{
+.skillSlider .slider .s-slide.top{
   z-index: 3;
   transition: 0.5s ease transform;
 }
-.skill .container .row .skillSlider .slider .s-slide .container{
+.skillSlider .slider .s-slide .container{
     width: 80%;
     margin: 0 auto;
 }
-.skill .container .row .skillSlider .slider .s-slide .container .icon img{
+.skillSlider .slider .s-slide .container .icon img{
     width: 60px;
 }
-.skill .container .row .skillSlider .slider .s-slide .container .description .des-header{
+.skillSlider .slider .s-slide .container .description .des-header{
     color: #000;
     font-size: 35px;
     font-weight: 600;
     font-family: 'Poppins';
 }
-.skill .container .row .skillSlider .slider .s-slide .description .web-text{
+.skillSlider .slider .s-slide .description .web-text{
     font-family: "Roboto",sans-serif;
     font-weight: 500;
     color: #050505;
@@ -284,10 +318,10 @@ nav{
     font-size: 24px;
     line-height: 1.35294;
 }
-.skill .container .row .skillSlider .slider-btn .arrow{
+.skillSlider .slider-btn .arrow{
     display: none;
 }
-.skill .container .row .skillSlider:hover .slider-btn .arrow{
+.skillSlider:hover .slider-btn .arrow{
     position: absolute;
     top: 50%;
     transform: translateY(-50%);
@@ -302,17 +336,17 @@ nav{
     border: 1px solid #e5e5e5!important;
     transition: 0.4s hover;
 }
-.skill .container .row .skillSlider .slider-btn .left{
+.skillSlider .slider-btn .left{
     left: 0px;
 }
-.skill .container .row .skillSlider .slider-btn .right{
+.skillSlider .slider-btn .right{
     right: 0px;
 }
-.skill .container .row .skillSlider .slider-btn .arrow:hover{
+.skillSlider .slider-btn .arrow:hover{
     border: 1px solid #050505!important;
 }
 /* skill end start here */
-.portfolio{
+/* .portfolio{
     margin-top: 147px;
 }
 .portfolio .container{
@@ -324,8 +358,8 @@ nav{
     margin: 0 auto;
     overflow: hidden;
     padding-bottom: 100px;
-}
-.portfolio .container .row .portfolio-title-holder{
+} */
+/* .portfolio .container .row .portfolio-title-holder{
     padding: 195px 0px 108px;
 }
 .portfolio .container .row .portfolio-title-holder .title-left h3{
@@ -351,75 +385,82 @@ nav{
     white-space: nowrap;
     z-index: -1;
     opacity: .1;
-}
-.portfolio .container .row .filter-holder{
+} */
+.filter-holder{
     width: 100%;
 }
-.portfolio .container .row .filter-holder ul.filter-row{
+.filter-holder ul{
     width: 100%;
     display: flex;
     flex-wrap: wrap;
+    padding: 0;
+    margin: 0;
 }
-.portfolio .container .row .filter-holder .filter-row li{
+.filter-holder ul li{
     width: 33.3333%;
-    display: block;
-    padding-right: 27px;
+  box-sizing: border-box;
+    padding-left: 27px;
     margin-bottom: 30px;
+    list-style: none;
 }
-.portfolio .container .row .filter-holder .filter-row li:nth-child(3),
-.portfolio .container .row .filter-holder .filter-row li:nth-child(6){
-    padding-right: 0;
-}
-.portfolio .container .row .filter-holder .filter-row .item{
+/* .filter-holder ul li:nth-child(1),
+.filter-holder ul li:nth-child(4)
+{
+    padding-left: 0;
+} */
+/* .filter-holder ul li:first-child{
+   padding-left: 0;
+} */
+.filter-holder ul li .item{
     width: 100%;
     background-color: rgb(23, 42, 69);
     padding: 25px 35px;
 }
-.portfolio .container .row .filter-holder .filter-row .item .item-icon{
+.filter-holder ul li .item .item-icon{
     display: flex;
     align-items: center;
     justify-content: space-between;
     margin-bottom: 30px;
 }
-.portfolio .container .row .filter-holder .filter-row .item .item-icon #folder-icon{
+.filter-holder ul li .item .item-icon #folder-icon{
     color: rgb(100, 255, 218);
     font-size: 40px;
 }
-.portfolio .container .row .filter-holder .filter-row .item .item-icon #github{
+.filter-holder ul li .item .item-icon #github{
     color: rgb(100, 255, 218);
     font-size: 21px;
 }
-.portfolio .container .row .filter-holder .filter-row .item .item-icon #external{
+.filter-holder ul li .item .item-icon #external{
     color: rgb(204, 214, 246);
     font-size: 21px;
     padding-left: 10px;
     transition: .3s;
 }
-.portfolio .container .row .filter-holder .filter-row .item .item-icon #external:hover{
+.filter-holder ul li .item .item-icon #external:hover{
     color: rgb(100, 255, 218);
 }
-.portfolio .container .row .filter-holder .filter-row .item .title{
+.filter-holder ul li .item  .title{
     margin-top: 10px;
     color: rgb(204, 214, 246);
     font-weight: 500;
     font-family: poppins;
     font-size: 20px;
 }
-.portfolio .container .row .filter-holder .filter-row .item .description p{
+.filter-holder ul li .item  .description p{
     color: rgb(168, 178, 209);
     font-size: 17px;
     margin-top: 19px;
     margin-bottom: 92px;
 }
-.portfolio .container .row .filter-holder .filter-row .item footer{
+.filter-holder ul li .item footer{
     width: 100%;
 }
-.portfolio .container .row .filter-holder .filter-row .item footer .nav-links{
+.filter-holder ul li .item footer .nav-links{
     width: 100%;
     display: flex;
     flex-wrap: wrap;
 }
-.portfolio .container .row .filter-holder .filter-row .item footer .nav-links a{
+.filter-holder ul li .item footer .nav-links a{
     text-decoration: none;
     font-size: 13px;
     color: rgb(136, 146, 176);
@@ -495,8 +536,18 @@ nav{
     .about {
         margin-top: 76px;
     }
-    .about .row{
+    /* .about .row{
         flex-direction: column;
+        width: 90%;
+    } */
+    /* .row{
+        flex-direction: column;
+        width: 90%;
+    } */
+    .row{
+        flex-direction: column;
+    }
+    .container{
         width: 90%;
     }
     .about-left{
@@ -509,18 +560,28 @@ nav{
     }
     /* about section end here */
     /* skill section start here */
-    .skill .container .row{
+    /* .skill .container .row{
         width: 90%;
-    }
-    .portfolio .container .row .title-holder .portfolio-title-right #filter-open{
+    } */
+    /* .portfolio .container .row .title-holder .portfolio-title-right #filter-open{
         cursor: pointer;
-    }
+    } */
     /* skill section end here */
     /* portfolio section start here */
-    .portfolio .container .row {
-        width: 90%;
+    .filter-holder ul li{
+        width: 50%;
     }
-    .title-left {
+    /* .filter-holder ul li:nth-child(2),
+    .filter-holder ul li:nth-child(4){
+        padding-right: 0;
+    } */
+    /* .filter-holder ul li:nth-child(3){
+        padding-right: 27px;
+    } */
+    /* .portfolio .container .row {
+        width: 90%;
+    } */
+    /* .title-left {
         width: 100%;
     }
     .portfolio .container .row .filter-holder .filter-row li {
@@ -532,7 +593,7 @@ nav{
     }
     .portfolio .container .row .filter-holder .filter-row li:nth-child(3){
         padding-right: 27px;
-    }
+    } */
     /* portfolio section start here */
 
 }
